2009-01-09  Quentin Mathe <qmathe@club-internet.fr>

	Optimized drawing to only redraw dirty portion of the layout item tree. 
	More documentation. 
	Few new utility methods related to the drawing or the geometry.
	* ETLayoutItem:
	Documented various methods.
	(-initWithView:value:representedObject:): Modified to set a default frame 
	if no view is provided.
	(-isBaseItem, -closestAncestorItemWithDisplayView, 
	-convertDisplayRect:toAncestorDisplayView:, -boundingBox, 
	-convertRectToParent:fromItem:, -convertRect:toItem:, -acceptsActions): 
	Added.
	(-setSelected:): Made KVO compliant.
	(-setNeedsDisplay:, -display): Rewritten to only trigger the redraw of the 
	receiver area in the view hierarchy. The dirty rect is computed with 
	-convertDisplayRect:toAncestorDisplayView:.

2008-12-30  Quentin Mathe <qmathe@club-internet.fr>

	Extended ETApplication with a new Arrange built-in menu and the possibility 
	to instantiate a main controller specified in the info plist of the 
	application bundle.
	Corrected header import statements.
	* ETApplication:
	Added ETApp macro. Documented the class a bit more. New enum for menu item
	tags.
	(-finishLaunching): Reworked to set up the menu bar as soon as possible.
	(-_instantiateAppDelegateIfSpecified): Added.
	(-developmentMenuItem:): Updated to use +menuItemWithTitle:tag:action: 
	category and ETDevelopmentMenuTag.
	(-arrangeMenuItem): Added.
	(+[NSMenuItem(Etoile) menuItemWithTitle:tag:action:]): Added.

2008-12-26  Quentin Mathe <qmathe@club-internet.fr>

	Some work to clean and improve the geometry support.
	* ETLayoutItem:
	Removed _defaultFrame ivar. Declared kETDefaultFrameProperty, 
	kETFlippedProperty, kETAnchorPointProperty and kETNeedsDisplay. Added 
	HAS_PROPERTY macro.
	(-display, -bounds, -centeredAnchorPoint, -anchorPoint, -setAnchorPoint:
	-position, -setPosition:): Added.
	(-setFlipped:): Modified to adjust the anchor point if needed.
	(-isFlipped): Added a check to ensure -isFlipped is consistent between 